Changed home to projects. Changed archive to blog

--- a/blog.html
+++ b/blog.html
@@ -1,13 +1,13 @@
 ---
 layout:     default
-title:      Archive
-subtitle:   Archive
-permalink:  /archive/
-section:    archive
+title:      Blog
+subtitle:   Blog
+permalink:  /blog/
+section:    blog
 style:      dark
 ---
 
-<div class="entry archive">
+<div class="entry blog">
     <ol>
         {% for post in site.posts %}
             {% include item.html %}
