--- a/index.html
+++ b/index.html
@@ -13,6 +13,17 @@ projects:   true
             <div class = "projectleftbar">
                 <a class = "projectbutton" id = "thermo" href = "thermo"><span class = "projecttitle">Thermo</span></a>
             </div>
+            <div class = "projectrightbar">
+                <a class = "projectbutton" id = "thermo" href = "thermo"><span class = "projecttitle">Thermo</span></a>
+            </div>
+        </div>
+        <div class = "projectrow">
+            <div class = "projectleftbar">
+                <a class = "projectbutton" id = "thermo" href = "thermo"><span class = "projecttitle">Thermo</span></a>
+            </div>
+            <div class = "projectrightbar">
+                <a class = "projectbutton" id = "thermo" href = "thermo"><span class = "projecttitle">Thermo</span></a>
+            </div>
         </div>
     </div>
 </div>
