--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@ projects:   true
 
 <div class="projects">
     <div class = "projectmenu">
-        <div class = "projectrow">
-            <div class = "projectleftbar">
-                <a class = "projectbutton" id = "thermo" href = "thermo"><span class = "projecttitle">Thermo</span></a>
+        <div class = "row">
+            <div class = "lefttile">
+                <a class = "button" id = "thermo" href = "thermo"></a>
             </div>
-            <div class = "projectrightbar">
-                <a class = "projectbutton" id = "thermo" href = "thermo"><span class = "projecttitle">Thermo</span></a>
+            <div class = "righttile">
+                <a class = "button" id = "thermo" href = "thermo"></a>
             </div>
-        <div class = "projectrow">
-            <div class = "projectleftbar">
-                <a class = "projectbutton" id = "thermo" href = "thermo"><span class = "projecttitle">Thermo</span></a>
+        <div class = "row">
+            <div class = "lefttile">
+                <a class = "button" id = "thermo" href = "thermo"></a>
             </div>
-            <div class = "projectrightbar">
-                <a class = "projectbutton" id = "thermo" href = "thermo"><span class = "projecttitle">Thermo</span></a>
+            <div class = "righttile">
+                <a class = "button" id = "thermo" href = "thermo"></a>
             </div>
         </div>
     </div>
