Trying to fix tiles

--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@ projects:   true
     <div class = "projectmenu">
         <div class = "row">
             <div class = "lefttile">
-                <a class = "button" id = "thermo" href = "thermo"></a>
+                <a class = "button" id = "thermo" href = "thermo"><img src="../images/thermo.png"></a>
             </div>
             <div class = "righttile">
-                <a class = "button" id = "thermo" href = "thermo"></a>
+                <a class = "button" id = "thermo" href = "thermo"><img src="../images/thermo.png"></a>
             </div>
         <div class = "row">
             <div class = "lefttile">
-                <a class = "button" id = "thermo" href = "thermo"></a>
+                <a class = "button" id = "thermo" href = "thermo"><img src="../images/thermo.png"></a>
             </div>
             <div class = "righttile">
-                <a class = "button" id = "thermo" href = "thermo"></a>
+                <a class = "button" id = "thermo" href = "thermo"><img src="../images/thermo.png"></a>
             </div>
         </div>
     </div>
