--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ projects:   true
     <div class = "projectmenu">
         <div class = "row">
             <div class = "lefttile">
-                <a class = "button" id = "thermo" href = "thermo"><img src="../images/thermo.png"<span class = "title"</span>Thermo</a>
+                <a class = "button" id = "thermo" href = "thermo"><img src="../images/thermo.png"<span class = "title"Thermo</span></a>
             </div>
             <div class = "righttile">
                 <a class = "button" id = "thermo" href = "thermo"><img src="../images/thermo.png"></a>
