centering not working

--- a/index.html
+++ b/index.html
@@ -14,7 +14,12 @@ projects:   true
                 <a class = "button" id = "thermo" href = "thermo"><img src="../images/thermo.png"/><span class = "title">Thermo</span></a>
             </div>
             <div class = "righttile">
-                <a class = "button" id = "thermo" href = "thermo"><img src="../images/thermo.png"></a>
+                <a class = "button" id = "thermo" href = "thermo"><img src="../images/thermo.png">
+                    <b class = "title2">
+                        <h1>Thermo</h1>
+                    </b>
+                </a>
+
             </div>
         <div class = "row">
             <div class = "lefttile">
