--- a/index.html
+++ b/index.html
@@ -11,7 +11,15 @@ projects:   true
     <div class = "projectmenu">
         <div class = "row">
             <div class = "lefttile">
-                <a class = "button" id = "thermo" href = "thermo"><img src="../images/thermo.png"/><span class = "title">Thermo</span></a>
+                <a class = "button" id = "thermo" href = "thermo">
+                    <img src="../images/thermo.png">
+                    <div class = "wrap">
+                        <span class = "title" style="
+                            display: inline-block;
+                            vertical-align: middle;
+                        ">Thermo</span>
+                    </div>
+                </a>
             </div>
             <div class = "righttile">
                 <a class = "button" id = "thermo" href = "thermo"><img src="../images/thermo.png">
