--- a/index.html
+++ b/index.html
@@ -22,10 +22,14 @@ projects:   true
                 </a>
             </div>
             <div class = "righttile">
-                <a class = "button" id = "thermo" href = "thermo"><img src="../images/thermo.png">
-                    <b class = "title2">
-                        <h1>Thermo</h1>
-                    </b>
+                <a class = "button" id = "thermo" href = "thermo">
+                    <img src="../images/thermo.png">
+                    <div class = "wrap">
+                        <span class = "title" style="
+                            display: inline-block;
+                            vertical-align: middle;
+                        ">Thermo</span>
+                    </div>
                 </a>
 
             </div>
