added more text

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@ projects:   true
                 <a class = "button" id = "thermo" href = "thermo">
                     <img src="../images/thermo.png">
                     <div class = "wrap">
-                        <span class = "title" style="
-                            display: inline-block;
-                            vertical-align: middle;
-                        ">Thermo</span>
+                        <div class = "title" style="display: inline-block; vertical-align: middle;">
+                            <h3>Thermo</h3>
+                            <p>A puzzle-platformer made with Actionscript</p>
+                        </div>
                     </div>
                 </a>
             </div>
@@ -25,10 +25,10 @@ projects:   true
                 <a class = "button" id = "thermo" href = "thermo">
                     <img src="../images/thermo.png">
                     <div class = "wrap">
-                        <span class = "title" style="
-                            display: inline-block;
-                            vertical-align: middle;
-                        ">Thermo</span>
+                        <div class = "title" style="display: inline-block; vertical-align: middle;">
+                            <h3>Thermo</h3>
+                            <p>A puzzle-platformer made with Actionscript</p>
+                        </div>
                     </div>
                 </a>
 
