--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ projects:   true
                     <div class = "wrap">
                         <div class = "title" style="display: inline-block; vertical-align: middle;">
                             <h2>Thermo</h2>
-                            <p>A puzzle-platformer made with Actionscript</p>
+                            <p>A puzzle-platformer written in Actionscript</p>
                         </div>
                     </div>
                 </a>
