--- a/index.html
+++ b/index.html
@@ -11,22 +11,22 @@ projects:   true
     <div class = "projectmenu">
         <div class = "row">
             <div class = "lefttile">
-                <a class = "button" id = "thermo" href = "thermo">
-                    <img src="../images/thermo.png">
+                <a class = "button" id = "imageThumb" href = "../projects/pbf.md">
+                    <img src="../images/fluid.png">
                     <div class = "wrap">
                         <div class = "title" style="display: inline-block; vertical-align: middle;">
-                            <h2>Thermo</h2>
-                            <p>A puzzle-platformer written in Actionscript</p>
+                            <h2>Position Based Fluids</h2>
+                            <p>A fluid simulation written in CUDA/C++</p>
                         </div>
                     </div>
                 </a>
             </div>
             <div class = "righttile">
-                <a class = "button" id = "thermo" href = "thermo">
-                    <img src="../images/thermo.png">
+                <a class = "button" id = "imageThumb" href = "imageThumb">
+                    <img src="../images/imageThumb.png">
                     <div class = "wrap">
                         <div class = "title" style="display: inline-block; vertical-align: middle;">
-                            <h3>Thermo</h3>
+                            <h3>imageThumb</h3>
                             <p>A puzzle-platformer made with Actionscript</p>
                         </div>
                     </div>
@@ -35,10 +35,10 @@ projects:   true
             </div>
         <div class = "row">
             <div class = "lefttile">
-                <a class = "button" id = "thermo" href = "thermo"><img src="../images/thermo.png"></a>
+                <a class = "button" id = "imageThumb" href = "imageThumb"><img src="../images/imageThumb.png"></a>
             </div>
             <div class = "righttile">
-                <a class = "button" id = "thermo" href = "thermo"><img src="../images/thermo.png"></a>
+                <a class = "button" id = "imageThumb" href = "imageThumb"><img src="../images/imageThumb.png"></a>
             </div>
         </div>
     </div>
