--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ projects:   true
     <div class = "projectmenu">
         <div class = "row">
             <div class = "lefttile">
-                <a class = "button" id = "imageThumb" href = "../projects/pbf.html">
+                <a class = "button" id = "imageThumb" href = "../projects/pbf.md">
                     <img src="../images/fluid.png">
                     <div class = "wrap">
                         <div class = "title" style="display: inline-block; vertical-align: middle;">
