--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@ projects:   true
             </div>
             <div class = "righttile">
                 <a class = "button" id = "imageThumb" href = "imageThumb">
-                    <img src="../images/imageThumb.png">
+                    <img src="../images/thermo.png">
                     <div class = "wrap">
                         <div class = "title" style="display: inline-block; vertical-align: middle;">
-                            <h3>imageThumb</h3>
+                            <h3>Thermo</h3>
                             <p>A puzzle-platformer made with Actionscript</p>
                         </div>
                     </div>
@@ -35,10 +35,10 @@ projects:   true
             </div>
         <div class = "row">
             <div class = "lefttile">
-                <a class = "button" id = "imageThumb" href = "imageThumb"><img src="../images/imageThumb.png"></a>
+                <a class = "button" id = "imageThumb" href = "imageThumb"><img src="../images/thermo.png"></a>
             </div>
             <div class = "righttile">
-                <a class = "button" id = "imageThumb" href = "imageThumb"><img src="../images/imageThumb.png"></a>
+                <a class = "button" id = "imageThumb" href = "imageThumb"><img src="../images/thermo.png"></a>
             </div>
         </div>
     </div>
