starting cloth writeup

--- a/index.html
+++ b/index.html
@@ -22,6 +22,19 @@ projects:   true
                 </a>
             </div>
             <div class = "righttile">
+                <a class = "button" id = "imageThumb" href = "../projects/cloth.html">
+                    <img src="../images/cloth.png">
+                    <div class = "wrap">
+                        <div class = "title" style="display: inline-block; vertical-align: middle;">
+                            <h3>Fluid-Cloth Coupling</h3>
+                            <p>A fluid simulation with cloth interaction written in CUDA/C++</p>
+                        </div>
+                    </div>
+                </a>
+
+            </div>
+        <div class = "row">
+            <div class = "lefttile">
                 <a class = "button" id = "imageThumb" href = "imageThumb">
                     <img src="../images/thermo.png">
                     <div class = "wrap">
@@ -31,11 +44,6 @@ projects:   true
                         </div>
                     </div>
                 </a>
-
-            </div>
-        <div class = "row">
-            <div class = "lefttile">
-                <a class = "button" id = "imageThumb" href = "imageThumb"><img src="../images/thermo.png"></a>
             </div>
             <div class = "righttile">
                 <a class = "button" id = "imageThumb" href = "imageThumb"><img src="../images/thermo.png"></a>
