josh fixed site

--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@ projects:   true
     <div class = "projectmenu">
         <div class = "row">
             <div class = "lefttile">
-                <a class = "button" id = "imageThumb" href = "../projects/pbf.html">
-                    <img src="../images/fluid.png">
+                <a class = "button" id = "imageThumb" href = "../projects/pbf.html" style="background-image:url(../images/fluid.png);">
                     <div class = "wrap">
                         <div class = "title" style="display: inline-block; vertical-align: middle;">
                             <h2>Position Based Fluids</h2>
@@ -22,11 +21,10 @@ projects:   true
                 </a>
             </div>
             <div class = "righttile">
-                <a class = "button" id = "imageThumb" href = "../projects/cloth.html">
-                    <img src="../images/cloth.png">
+                <a class = "button" id = "imageThumb" href = "../projects/cloth.html" style="background-image:url(../images/cloth.png);">
                     <div class = "wrap">
                         <div class = "title" style="display: inline-block; vertical-align: middle;">
-                            <h3>Fluid-Cloth Coupling</h3>
+                            <h2>Fluid-Cloth Coupling</h2>
                             <p>A fluid simulation with cloth interaction written in CUDA/C++</p>
                         </div>
                     </div>
@@ -35,18 +33,24 @@ projects:   true
             </div>
         <div class = "row">
             <div class = "lefttile">
-                <a class = "button" id = "imageThumb" href = "imageThumb">
-                    <img src="../images/thermo.png">
+                <a class = "button" id = "imageThumb" href = "imageThumb" style="background-image:url(../images/thermo.png);">
                     <div class = "wrap">
                         <div class = "title" style="display: inline-block; vertical-align: middle;">
-                            <h3>Thermo</h3>
-                            <p>A puzzle-platformer made with Actionscript</p>
+                            <h2>Thermo</h2>
+                            <p>A puzzle-platformer written in Actionscript</p>
                         </div>
                     </div>
                 </a>
             </div>
             <div class = "righttile">
-                <a class = "button" id = "imageThumb" href = "imageThumb"><img src="../images/thermo.png"></a>
+                 <a class = "button" id = "imageThumb" href = "imageThumb" style="background-image:url(../images/thermo.png);">
+                     <div class = "wrap">
+                        <div class = "title" style="display: inline-block; vertical-align: middle;">
+                            <h2> Deferred Rendering Engine</h2>
+                            <p>A deferred engine written in C++/OpenGL</p>
+                        </div>
+                    </div>
+                </a>
             </div>
         </div>
     </div>
