--- a/index.html
+++ b/index.html
@@ -31,23 +31,23 @@ projects:   true
                 </a>
 
             </div>
+        <div class = "lefttile">
+             <a class = "button" id = "imageThumb" href = "../projects/deferred.html" style="background-image:url(../images/deferred.png);">
+                 <div class = "wrap">
+                    <div class = "title" style="display: inline-block; vertical-align: middle;">
+                        <h2> Deferred Rendering Engine</h2>
+                        <p>A deferred engine written in C++/OpenGL</p>
+                    </div>
+                </div>
+            </a>
+        </div>
         <div class = "row">
-            <div class = "lefttile">
-                <a class = "button" id = "imageThumb" href = "imageThumb" style="background-image:url(../images/thermo.png);">
+            <div class = "righttile">
+                <a class = "button" id = "imageThumb" href = "../projects/thermo.html" style="background-image:url(../images/thermo.png);">
                     <div class = "wrap">
                         <div class = "title" style="display: inline-block; vertical-align: middle;">
                             <h2>Thermo</h2>
                             <p>A puzzle-platformer written in Actionscript</p>
-                        </div>
-                    </div>
-                </a>
-            </div>
-            <div class = "righttile">
-                 <a class = "button" id = "imageThumb" href = "imageThumb" style="background-image:url(../images/thermo.png);">
-                     <div class = "wrap">
-                        <div class = "title" style="display: inline-block; vertical-align: middle;">
-                            <h2> Deferred Rendering Engine</h2>
-                            <p>A deferred engine written in C++/OpenGL</p>
                         </div>
                     </div>
                 </a>
