--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ projects:   true
                 <a class = "button" id = "imageThumb" href = "../projects/cloth.html" style="background-image:url(../images/cloth.png);">
                     <div class = "wrap">
                         <div class = "title" style="display: inline-block; vertical-align: middle;">
-                            <h2>Fluid-Cloth Coupling</h2>
+                            <h2>Fluid-Cloth Two-Way Coupling</h2>
                             <p>A fluid simulation with cloth interaction written in CUDA/C++</p>
                         </div>
                     </div>
