--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ projects:   true
              <a class = "button" id = "imageThumb" href = "../projects/deferred.html" style="background-image:url(../images/deferred.png);">
                  <div class = "wrap">
                     <div class = "title" style="display: inline-block; vertical-align: middle;">
-                        <h2> Deferred Rendering Engine</h2>
+                        <h2> Deferred Shading Engine</h2>
                         <p>A deferred engine written in C++/OpenGL</p>
                     </div>
                 </div>
