--- a/resume/index.html
+++ b/resume/index.html
@@ -27,8 +27,9 @@
           <h2>Work Experience</h2>
 
           <span class="company">DreamWorks Animation</span>
-          <p class="details small-caps">Oct 2015 &mdash; Present &bull; Software Engineer - Shading R&D</p>
-          <p class="details">Part of a team responsible for developing and maintaining DreamWorks' proprietary shaders as well as assisting artists in applying them to movies currently in production. Examples include eyes, feathers, fur, and hair.</p>
+          <p class="details small-caps">Software Engineer - Shading R&D</p>
+          <p class="details small-caps">Oct 2015 &mdash; Present</p>
+          <p class="details">Responsible for developing and maintaining DreamWorks' proprietary shaders as part of a 5 person team. Additionally, assists artists in applying the shaders to movies currently in production. Examples include eyes, feathers, fur, and hair.</p>
 
           <h2>Projects</h2>
 
@@ -38,7 +39,7 @@
 
           <span class="company">Fluid Simulation</span>
           <p class="details small-caps">Fall 2014 &mdash; Spring 2015</p>
-          <p class="details">Written from scratch using CUDA, C++, and OpenGL. Simulates fluid and foam particles with realistic motion in real-time. Implemented many different research papers resulting in a framework capable of running 50k fluid particles and up to 500k foam particles at 10-15 fps. The main resource for the fluid physics is "Position Based Fluids" (Macklin 2013). Extended this framework to support cloth-fluid interaction.</p>
+          <p class="details">Written from scratch using CUDA, C++, and OpenGL. Simulates fluid and foam particles with realistic motion in real-time. Implemented many different research papers resulting in a framework capable of running 50k fluid particles and up to 500k foam particles at 10-15 fps. The main resource for the fluid physics is "Position Based Fluids" (Macklin 2013). Extended this framework to support fluid-cloth coupling.</p>
 
           <span class="company">Deferred Rendering Engine</span>
           <p class="details small-caps">Spring 2015</p>
