Added snow simulation page

--- a/index.html
+++ b/index.html
@@ -21,15 +21,14 @@ projects:   true
                 </a>
             </div>
             <div class = "righttile">
-                <a class = "button" id = "imageThumb" href = "../projects/cloth.html" style="background-image:url(../images/cloth.png);">
+                <a class = "button" id = "imageThumb" href = "../projects/snow.html" style="background-image:url(../images/snow.png);">
                     <div class = "wrap">
                         <div class = "title" style="display: inline-block; vertical-align: middle;">
-                            <h2>Fluid-Cloth Two-Way Coupling</h2>
-                            <p>A fluid simulation with cloth interaction written in CUDA/C++</p>
+                            <h2>MPM Snow Simulation</h2>
+                            <p>A snow simulation written in CUDA/C++</p>
                         </div>
                     </div>
                 </a>
-
             </div>
         <div class = "lefttile">
              <a class = "button" id = "imageThumb" href = "../projects/deferred.html" style="background-image:url(../images/deferred.png);">
@@ -48,6 +47,18 @@ projects:   true
                         <div class = "title" style="display: inline-block; vertical-align: middle;">
                             <h2>Thermo</h2>
                             <p>A puzzle-platformer written in Actionscript</p>
+                        </div>
+                    </div>
+                </a>
+            </div>
+        </div>
+        <div class = "row">
+            <div class = "righttile">
+                <a class = "button" id = "imageThumb" href = "../projects/cloth.html" style="background-image:url(../images/cloth.png);">
+                    <div class = "wrap">
+                        <div class = "title" style="display: inline-block; vertical-align: middle;">
+                            <h2>Fluid-Cloth Two-Way Coupling</h2>
+                            <p>A fluid simulation with cloth interaction written in CUDA/C++</p>
                         </div>
                     </div>
                 </a>
