--- a/index.html
+++ b/index.html
@@ -30,17 +30,17 @@ projects:   true
                     </div>
                 </a>
             </div>
-        <div class = "lefttile">
-             <a class = "button" id = "imageThumb" href = "../projects/deferred.html" style="background-image:url(../images/deferred.png);">
-                 <div class = "wrap">
-                    <div class = "title" style="display: inline-block; vertical-align: middle;">
-                        <h2> Deferred Shading Engine</h2>
-                        <p>A deferred engine written in C++/OpenGL</p>
-                    </div>
-                </div>
-            </a>
-        </div>
         <div class = "row">
+            <div class = "lefttile">
+                <a class = "button" id = "imageThumb" href = "../projects/deferred.html" style="background-image:url(../images/deferred.png);">
+                    <div class = "wrap">
+                        <div class = "title" style="display: inline-block; vertical-align: middle;">
+                            <h2> Deferred Shading Engine</h2>
+                            <p>A deferred engine written in C++/OpenGL</p>
+                        </div>
+                    </div>
+                </a>
+            </div>
             <div class = "righttile">
                 <a class = "button" id = "imageThumb" href = "../projects/thermo.html" style="background-image:url(../images/thermo.png);">
                     <div class = "wrap">
@@ -53,12 +53,22 @@ projects:   true
             </div>
         </div>
         <div class = "row">
-            <div class = "righttile">
+            <div class = "lefttile">
                 <a class = "button" id = "imageThumb" href = "../projects/cloth.html" style="background-image:url(../images/cloth.png);">
                     <div class = "wrap">
                         <div class = "title" style="display: inline-block; vertical-align: middle;">
                             <h2>Fluid-Cloth Two-Way Coupling</h2>
                             <p>A fluid simulation with cloth interaction written in CUDA/C++</p>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class = "righttile">
+                <a class = "button" id = "imageThumb" href = "../projects/rebound.html" style="background-image:url(../images/rebound.png);">
+                    <div class = "wrap">
+                        <div class = "title" style="display: inline-block; vertical-align: middle;">
+                            <h2>Rebound</h2>
+                            <p>A platformer written in Actionscript</p>
                         </div>
                     </div>
                 </a>
