--- a/about.html
+++ b/about.html
@@ -12,4 +12,5 @@ style:      dark
     <h4>Contact</h4>
     <p class="info">Email <a href="mailto:jag547@cornell.edu" target="_top">jag547@cornell.edu</a>
     <p class="info">Twitter <a href="https://twitter.com/outofdaylight">outofdaylight</a></p>
+    <p class="info">LinkedIn <a href="https://www.linkedin.com/in/joel-gross-440264a0">profile</a></p>
 </div>
