--- a/resume/index.html
+++ b/resume/index.html
@@ -29,7 +29,7 @@
           <span class="company">DreamWorks Animation</span>
           <p class="details small-caps">Software Engineer - Shading R&D</p>
           <p class="details small-caps">Oct 2015 &mdash; Present</p>
-          <p class="details">Responsible for developing and maintaining DreamWorks' proprietary shaders as part of a 5 person team. Additionally, assists artists in applying the shaders to movies currently in production. Examples include eyes, feathers, fur, and hair.</p>
+          <p class="details">Responsible for developing and maintaining DreamWorks' proprietary shaders on REYES and MCRT renderers. Examples include hair, fur, feathers, eyes, and all sorts of utility shaders.</p>
 
           <h2>Projects</h2>
 
@@ -57,8 +57,8 @@
 
           <ul class="details">
             <li>Java &bull; <span class="small-caps">Fluent, 6 years</span></li>
-            <li>C++ &bull; <span class="small-caps">Fluent, 5 years</span></li>
-            <li>C &bull; <span class="small-caps">Fluent, 5 years</span></li>
+            <li>C++ &bull; <span class="small-caps">Fluent, 6 years</span></li>
+            <li>C &bull; <span class="small-caps">Fluent, 6 years</span></li>
             <li>Python &bull; <span class="small-caps">Familiar, 4 years</span></li>
             <li>C# &bull; <span class="small-caps">Proficient, 1 years</span></li>
             <li>Actionscript 3 &bull; <span class="small-caps">Proficient, 1 year</span></li>
