--- a/index.html
+++ b/index.html
@@ -11,6 +11,16 @@ projects:   true
     <div class = "projectmenu">
         <div class = "row">
             <div class = "lefttile">
+                <a class = "button" id = "imageThumb" href = "../projects/hikari.html" style="background-image:url(../images/car.png);">
+                    <div class = "wrap">
+                        <div class = "title" style="display: inline-block; vertical-align: middle;">
+                            <h2>Hikari</h2>
+                            <p>A path tracer written in CUDA/C++</p>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class = "righttile">
                 <a class = "button" id = "imageThumb" href = "../projects/pbf.html" style="background-image:url(../images/fluid.png);">
                     <div class = "wrap">
                         <div class = "title" style="display: inline-block; vertical-align: middle;">
@@ -20,7 +30,9 @@ projects:   true
                     </div>
                 </a>
             </div>
-            <div class = "righttile">
+        </div>
+        <div class = "row">
+            <div class = "lefttile">
                 <a class = "button" id = "imageThumb" href = "../projects/snow.html" style="background-image:url(../images/snow.png);">
                     <div class = "wrap">
                         <div class = "title" style="display: inline-block; vertical-align: middle;">
@@ -30,8 +42,7 @@ projects:   true
                     </div>
                 </a>
             </div>
-        <div class = "row">
-            <div class = "lefttile">
+            <div class = "righttile">
                 <a class = "button" id = "imageThumb" href = "../projects/deferred.html" style="background-image:url(../images/deferred.png);">
                     <div class = "wrap">
                         <div class = "title" style="display: inline-block; vertical-align: middle;">
@@ -41,7 +52,9 @@ projects:   true
                     </div>
                 </a>
             </div>
-            <div class = "righttile">
+        </div>
+        <div class = "row">
+            <div class = "lefttile">
                 <a class = "button" id = "imageThumb" href = "../projects/thermo.html" style="background-image:url(../images/thermo.png);">
                     <div class = "wrap">
                         <div class = "title" style="display: inline-block; vertical-align: middle;">
@@ -51,9 +64,7 @@ projects:   true
                     </div>
                 </a>
             </div>
-        </div>
-        <div class = "row">
-            <div class = "lefttile">
+            <div class = "righttile">
                 <a class = "button" id = "imageThumb" href = "../projects/cloth.html" style="background-image:url(../images/cloth.png);">
                     <div class = "wrap">
                         <div class = "title" style="display: inline-block; vertical-align: middle;">
@@ -63,7 +74,9 @@ projects:   true
                     </div>
                 </a>
             </div>
-            <div class = "righttile">
+        </div>
+        <div class = "row">
+            <div class = "lefttile">
                 <a class = "button" id = "imageThumb" href = "../projects/rebound.html" style="background-image:url(../images/rebound.png);">
                     <div class = "wrap">
                         <div class = "title" style="display: inline-block; vertical-align: middle;">
