--- a/resume/index.html
+++ b/resume/index.html
@@ -15,7 +15,7 @@
           <br>
           <a href="http://joelgross.me/">http://joelgross.me/</a>
           <br><br>
-          Pasadena, California<br>
+          Santa Monica, California<br>
           516-640-6018
         </address>
       </header>
@@ -26,9 +26,14 @@
         <div class="left-column">
           <h2>Work Experience</h2>
 
+          <span class="company">Lightstorm Entertainment</span>
+          <p class="details small-caps">Software Engineer</p>
+          <p class="details small-caps">Nov 2016 &mdash; Present</p>
+          <p class="details">Designed and developed a proprietary real-time particle system for use in large-scale virtual production on the Avatar sequels. The system was built using CUDA and C++ and integrated into the pipeline for use on stage during motion capture. Also responsible for developing new shaders for use in the real-time engine used for motion capture and previs. Additionally, responsible for creating and improving workflows for artists and providing support for the tools.</p>
+
           <span class="company">DreamWorks Animation</span>
           <p class="details small-caps">Software Engineer - Shading R&D</p>
-          <p class="details small-caps">Oct 2015 &mdash; Present</p>
+          <p class="details small-caps">Oct 2015 &mdash; Nov 2016</p>
           <p class="details">Responsible for developing and maintaining DreamWorks' proprietary shaders on REYES and MCRT renderers. Examples include hair, fur, feathers, eyes, and a wide variety of utility shaders.</p>
 
           <h2>Projects</h2>
@@ -39,7 +44,7 @@
 
           <span class="company">Fluid Simulation</span>
           <p class="details small-caps">Fall 2014 &mdash; Spring 2015</p>
-          <p class="details">Written from scratch using CUDA, C++, and OpenGL. Simulates fluid and foam particles with realistic motion in real-time. Implemented many different research papers resulting in a framework capable of running 50k fluid particles and up to 500k foam particles at 10-15 fps. The main resource for the fluid physics is "Position Based Fluids" (Macklin 2013). Extended this framework to support fluid-cloth coupling.</p>
+          <p class="details">Written from scratch using CUDA, C++, and OpenGL. Simulates fluid and foam particles with realistic motion in real-time. Implemented several research papers resulting in a framework capable of running 128k fluid particles and up to 500k foam particles at 30 fps. The main resource for the fluid physics is "Position Based Fluids" (Macklin 2013). Extended this framework to support fluid-cloth coupling.</p>
 
           <span class="company">Deferred Rendering Engine</span>
           <p class="details small-caps">Spring 2015</p>
@@ -47,7 +52,7 @@
 
           <span class="company">Thermo</span>
           <p class="details small-caps">Fall 2014</p>
-          <p class="details">Developed a puzzle-platformer using Actionscript 3 in a team of 6. Personally responsible for game direction, gameplay programming, and art. Played by over 50k people across Newgrounds and Kongregate. Featured as a top game on Jayisgames.com.</p>
+          <p class="details">Developed a puzzle-platformer using Actionscript 3 in a team of 6. Personally responsible for game direction, gameplay programming, and art. Played by over 50k people across Newgrounds and Kongregate.</p>
         </div>
 
         <div class="right-column">
@@ -56,9 +61,9 @@
           <span class="subsection">Programming</span>
 
           <ul class="details">
-            <li>Java &bull; <span class="small-caps">Fluent, 6 years</span></li>
-            <li>C++ &bull; <span class="small-caps">Fluent, 6 years</span></li>
-            <li>C &bull; <span class="small-caps">Fluent, 6 years</span></li>
+            <li>Java &bull; <span class="small-caps">Fluent, 7 years</span></li>
+            <li>C++ &bull; <span class="small-caps">Fluent, 7 years</span></li>
+            <li>C &bull; <span class="small-caps">Fluent, 7 years</span></li>
             <li>Python &bull; <span class="small-caps">Familiar, 4 years</span></li>
             <li>C# &bull; <span class="small-caps">Proficient, 1 year</span></li>
             <li>Actionscript 3 &bull; <span class="small-caps">Proficient, 1 year</span></li>
@@ -80,7 +85,6 @@
             <li>OpenGL/GLSL</li>
             <li>Unity</li>
             <li>Unreal Engine 4</li>
-            <li>LibGDX</li>
             <li>Git</li>
           </ul>
         </div>
