--- a/resume/index.html
+++ b/resume/index.html
@@ -28,7 +28,7 @@
           <span class="company">Lightstorm Entertainment</span>
           <p class="details small-caps">Software Engineer</p>
           <p class="details small-caps">Nov 2016 &mdash; Present</p>
-          <p class="details">Designed and developed a proprietary real-time particle system for use in large-scale virtual production on the Avatar sequels. The system was built using CUDA and C++ and integrated into the pipeline for use on stage during motion capture. Also responsible for developing new shaders for use in the real-time engine used for motion capture and previs. Additionally, responsible for creating and improving workflows for artists and providing support for the tools.</p>
+          <p class="details">Designed and developed a proprietary real-time particle system and a suite of tools surrounding the system for use in large-scale virtual production on the Avatar sequels. The system was built using CUDA and C++ and integrated into the pipeline for use on stage during motion capture as well as for previs shot creation. Additionally, responsible for shader development and the creation of workflows to assist artists with their daily production tasks.</p>
 
           <span class="company">DreamWorks Animation</span>
           <p class="details small-caps">Software Engineer - Shading R&D</p>
@@ -37,9 +37,9 @@
 
           <h2>Projects</h2>
 
-          <span class="company">Snow Simulation</span>
-          <p class="details small-caps">Spring 2015</p>
-          <p class="details">Written from scratch using CUDA, C++, and OpenGL with a partner. Simulates snow with realistic fracture using the MPM technique. Based on Disney's "The material point method for Snow Simulation" research paper which details the method used in the movie "Frozen".</p>
+          <span class="company">Algorithmic cryptocurrency trader</span>
+          <p class="details small-caps">Fall 2017 &mdash; Present</p>
+          <p class="details">Built a Machine Learning-based high-frequency trading bot that successfully trades hundreds of times a day in a live trading environment. The bot is trained on historical data of several different cryptocurrencies and is able to accurately predict trends over 70% of the time.</p>
 
           <span class="company">Fluid Simulation</span>
           <p class="details small-caps">Fall 2014 &mdash; Spring 2015</p>
@@ -60,29 +60,30 @@
           <span class="subsection">Programming</span>
 
           <ul class="details">
-            <li>Java &bull; <span class="small-caps">Fluent, 7 years</span></li>
-            <li>C++ &bull; <span class="small-caps">Fluent, 7 years</span></li>
-            <li>C &bull; <span class="small-caps">Fluent, 7 years</span></li>
-            <li>Python &bull; <span class="small-caps">Familiar, 4 years</span></li>
+            <li>C++ &bull; <span class="small-caps">Fluent, 8 years</span></li>
+            <li>C &bull; <span class="small-caps">Fluent, 8 years</span></li>
+            <li>Java &bull; <span class="small-caps">Fluent, 5 years</span></li>
+            <li>Python &bull; <span class="small-caps">Familiar, 5 years</span></li>
             <li>C# &bull; <span class="small-caps">Proficient, 1 year</span></li>
             <li>Actionscript 3 &bull; <span class="small-caps">Proficient, 1 year</span></li>
           </ul>
-        
+
           <span class="subsection">Design</span>
 
           <ul class="details">
             <li>Adobe Photoshop &bull; <span class="small-caps">Fluent, 10 years</span></li>
             <li>Adobe Flash &bull; <span class="small-caps">Proficient, 4 years</span></li>
           </ul>
-          
+
           <span class="subsection">Tools &amp; Platforms</span>
 
           <ul class="details">
-            <li>Linux</li>
-            <li>Microsoft Windows</li>
             <li>CUDA</li>
             <li>OpenGL/GLSL</li>
+            <li>Linux</li>
+            <li>Microsoft Windows</li>
             <li>Unity</li>
+            <li>Maya</li>
             <li>Unreal Engine 4</li>
             <li>Git</li>
           </ul>
